updates to url/uri as per java improved status reporting of json file processing
git-svn-id: https://subversion.assembla.com/svn/smart-cs/trunk@9277 37136b1e-4cb1-4992-8394-573b48a9bdce