@@ -24,6 +24,7 @@ package org.wcs.smart.plan.map.udig;
 import java.io.IOException;
 import java.io.StringReader;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Locale;
 
@@ -66,7 +67,7 @@ public class PlanTargetGeoResource extends IGeoResource {
 		URL serviceIdentifer = service.getIdentifier();
 		
 		try{
-			this.url = new URL(serviceIdentifer, serviceIdentifer.toExternalForm() + "#" + PlanTargetDataSource.PLAN_TARGET_TYPE, CorePlugin.RELAXED_HANDLER); //$NON-NLS-1$
+			this.url = URL.of(URI.create(serviceIdentifer.toExternalForm() + "#" + PlanTargetDataSource.PLAN_TARGET_TYPE), CorePlugin.RELAXED_HANDLER); //$NON-NLS-1$
 		 } catch (MalformedURLException e) {
              throw new IllegalArgumentException("The service URL must not contain a #", e); //$NON-NLS-1$
          }
