@@ -22,6 +22,7 @@
 package org.wcs.smart.plan.map.udig;
 
 import java.io.Serializable;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -107,7 +108,7 @@ public class PlanTargetServiceExtension implements ServiceExtension {
 		
 		String url = "smart://smartdb/plan/" + (planuuid == null ? "" : planuuid) + "." + subPlans.toString(); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 		try{
-			return new URL(null, url, CorePlugin.RELAXED_HANDLER);
+			return URL.of(URI.create(url), CorePlugin.RELAXED_HANDLER);
 		}catch (Throwable t){
 			return null;
 		}
